--- a/.env
+++ b/.env
@@ -1,24 +1,23 @@
 # Primas
-DATABASE_URL="mysql://root:1980@localhost:3306/grfblog"
-#DATABASE_URL="postgres://default:o3xzR9SVmsgl@ep-crimson-field-a4mun8us.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+DATABASE_URL=
 
 # Auth
-AUTH_SECRET="gs165G11df6h26d1Gsjodgnlsdngdgsg"
+AUTH_SECRET=
 
 # Nodemailer
-EMAIL_SERVER_HOST=smtp.gmail.com
-EMAIL_SERVER_PORT=465
-EMAIL_SERVER_USER=fariastech19@gmail.com
-EMAIL_SERVER_PASSWORD=ylinvrtniuaoksbq
-EMAIL_FROM=fariastech19@gmail.com
+EMAIL_SERVER_HOST=
+EMAIL_SERVER_PORT=
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=
+EMAIL_FROM=
 
 # Google
-AUTH_GOOGLE_ID=81448189817-u6871v2jfqmqohjvrtvmno1vl9g1salv.apps.googleusercontent.com
-AUTH_GOOGLE_SECRET=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
+AUTH_GOOGLE_ID=
+AUTH_GOOGLE_SECRET=
 
 # Facebook
-AUTH_FACEBOOK_ID=1237078934279521
-AUTH_FACEBOOK_SECRET=5ec27c566e8719e4d70b06238c434b3f
+AUTH_FACEBOOK_ID=
+AUTH_FACEBOOK_SECRET=
 
 # Gemini
-GEMINI_API_KEY=AIzaSyD-3pZj6sAYWdpSD0W_l5TaZsbLhMpkY1Q
+GEMINI_API_KEY=
